forceD-appX/main/default/objects/Case/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>CaseType</label>
    <length>3</length>
    <type>Text</type>
</CustomField>