forceD-appX/main/default/objects/Case/fields/Login_Url__c.field-meta.xml
<CustomField>
    <fullName>Login_Url__c</fullName>
    <label>Login Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>